# perdiem-django

./: .coveragerc  .env-sample  .gitignore  .travis.yml  README.md  fabfile.py  manage.py  pyproject.toml  requirements.txt
accounts/: apps.py  backends.py  cache.py  factories.py  forms.py  middleware.py  models.py  pipeline.py  signals.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofiles.py  0003_auto_20160514_0528.py  0004_auto_20160522_2139.py  0005_auto_20160623_0657.py  0006_auto_20161115_0635.py  0007_auto_20170528_2250.py
api/: tests.py  urls.py  views.py
artist/: admin.py  context_processors.py  factories.py  forms.py  geolocator.py  managers.py  models.py  tests.py  views.py
artist/migrations/: 0001_initial.py  0002_auto_20160317_0521.py  0003_auto_20160522_2139.py  0004_auto_20160522_2141.py  0005_auto_20160522_2328.py  0006_updatetitles.py  0007_artistadmin.py  0008_auto_20160625_0134.py  0009_auto_20170201_0753.py  0010_auto_20170201_0754.py  0011_auto_20170201_0754.py  0012_auto_20170201_0820.py  0013_auto_20170511_0508.py
campaign/: admin.py  apps.py  factories.py  forms.py  models.py  signals.py  tests.py  views.py
campaign/migrations/: 0001_initial.py  0002_auto_20160411_0246.py  0003_auto_20160418_0057.py  0004_artistpercentagebreakdown.py  0005_auto_20160618_2310.py  0006_auto_20160618_2351.py  0007_auto_20160618_2352.py  0008_auto_20160618_2352.py  0009_auto_20160618_2353.py  0010_auto_20160625_0134.py
emails/: apps.py  factories.py  mailchimp.py  messages.py  models.py  signals.py  tests.py  utils.py  views.py
emails/migrations/: 0001_initial.py  0002_auto_20160502_0538.py  0003_auto_20160531_0446.py
music/: factories.py  models.py  tests.py  views.py
music/admin/: forms.py  model_admins.py  views.py
music/migrations/: 0001_initial.py  0002_auto_20160725_0226.py  0003_auto_20160730_1802.py  0004_track.py  0005_auto_20160911_0829.py  0006_auto_20160920_0724.py  0007_auto_20190908_2201.py
music/templatetags/: music.py
perdiem/: .coveragerc  fabfile.py  manage.py  tests.py  urls.py  views.py  wsgi.py
perdiem/accounts/: admin.py  backends.py  cache.py  context_processors.py  factories.py  forms.py  middleware.py  models.py  pipeline.py  signals.py  tests.py  urls.py  views.py
perdiem/api/: tests.py  urls.py  views.py
perdiem/artist/: admin.py  factories.py  forms.py  geolocator.py  managers.py  models.py  tests.py  views.py
perdiem/campaign/: admin.py  factories.py  models.py  signals.py  tests.py  views.py
perdiem/emails/: factories.py  mailchimp.py  managers.py  messages.py  models.py  signals.py  tests.py  utils.py  views.py
perdiem/music/: admin.py  factories.py  models.py  tests.py  views.py
perdiem/perdiem/: context_processors.py  custom_storages.py  tests.py  urls.py  utils.py  views.py  wsgi.py
perdiem/render/: tests.py
perdiem/settings/: base.py  prod.py
static/css/: home.css  perdiem.css  resources.css
templates/: base.html  home.html  object_preview.html  object_preview_music.html
templates/artist/: artist_application.html  artist_application_thanks.html  artist_detail.html  artist_list.html
templates/email/: artist_apply.email  artist_update.email  base.email  credentials.email  invest_success.email  welcome.email
templates/extra/: faq.html  privacy.html  resources.html  terms.html  trust.html
templates/leaderboard/: leaderboard.html
templates/music/: album_detail.html  music.html
(+93 files in other folders)
