[tool.poetry]
name = "perdiem-django"
version = "0.1.0"
description = "Crowdfunding platform for emerging musicians."
authors = ["Lucas Connors <lucas@revolutiontech.ca>", "localastronaut"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.6"
Django = "~2.2.8"
gunicorn = "^20.0.4"
psycopg2 = "=2.8.4"
Pillow = "^6.2.1"
django-classbasedsettings = "^1.5.0"
social-auth-app-django = "^3.1.0"
python-memcached = "^1.59"
requests = "^2.22.0"
boto3 = "^1.10.45"
django-pigeon = "^0.3.0"
sorl-thumbnail = "^12.5.0"
whitenoise = "^5.0.1"
django-s3-storage = "^0.12.5"
Fabric3 = "^1.14.post1"
djangorestframework = "^3.11.0"
django-ses = "^0.8.13"
geopy = "^1.20.0"
pinax-stripe = "^4.4.0"
django-templated-email = "^2.3.0"
django-markdown-deux = "^1.0.5"
django-pagedown = "^2.0.3"
django-gfklookupwidget = "^1.0.7"
python-dotenv = "^0.10.3"
sentry-sdk = "^0.13.5"

[tool.poetry.dev-dependencies]
factory-boy = "^2.12.0"
coverage = "^5.0.1"
black = {version = "^19.10b0",allows-prereleases = true}
pyupgrade = "^1.25"

[tool.black]
line-length = 88
target_version = ["py36"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
